; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_sjson.c_sjson_encoder_get_table_size.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_sjson.c_sjson_encoder_get_table_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LUA_TNUMBER = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @sjson_encoder_get_table_size to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sjson_encoder_get_table_size(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load i32*, i32** %3, align 8
  %8 = load i32, i32* %4, align 4
  %9 = call i32 @lua_pushvalue(i32* %7, i32 %8)
  %10 = load i32*, i32** %3, align 8
  %11 = call i32 @lua_pushnil(i32* %10)
  store i32 0, i32* %5, align 4
  br label %12

12:                                               ; preds = %42, %2
  %13 = load i32*, i32** %3, align 8
  %14 = call i64 @lua_next(i32* %13, i32 -2)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %43

16:                                               ; preds = %12
  %17 = load i32*, i32** %3, align 8
  %18 = call i32 @lua_pop(i32* %17, i32 1)
  %19 = load i32*, i32** %3, align 8
  %20 = call i64 @lua_type(i32* %19, i32 -1)
  %21 = load i64, i64* @LUA_TNUMBER, align 8
  %22 = icmp eq i64 %20, %21
  br i1 %22, label %23, label %39

23:                                               ; preds = %16
  %24 = load i32*, i32** %3, align 8
  %25 = call i32 @lua_tointeger(i32* %24, i32 -1)
  store i32 %25, i32* %6, align 4
  %26 = load i32, i32* %6, align 4
  %27 = load i32, i32* %5, align 4
  %28 = icmp sgt i32 %26, %27
  br i1 %28, label %29, label %31

29:                                               ; preds = %23
  %30 = load i32, i32* %6, align 4
  store i32 %30, i32* %5, align 4
  br label %38

31:                                               ; preds = %23
  %32 = load i32, i32* %6, align 4
  %33 = icmp sle i32 %32, 0
  br i1 %33, label %34, label %37

34:                                               ; preds = %31
  store i32 -1, i32* %5, align 4
  %35 = load i32*, i32** %3, align 8
  %36 = call i32 @lua_pop(i32* %35, i32 1)
  br label %43

37:                                               ; preds = %31
  br label %38

38:                                               ; preds = %37, %29
  br label %42

39:                                               ; preds = %16
  store i32 -1, i32* %5, align 4
  %40 = load i32*, i32** %3, align 8
  %41 = call i32 @lua_pop(i32* %40, i32 1)
  br label %43

42:                                               ; preds = %38
  br label %12

43:                                               ; preds = %39, %34, %12
  %44 = load i32*, i32** %3, align 8
  %45 = call i32 @lua_pop(i32* %44, i32 1)
  %46 = load i32, i32* %5, align 4
  ret i32 %46
}

declare dso_local i32 @lua_pushvalue(i32*, i32) #1

declare dso_local i32 @lua_pushnil(i32*) #1

declare dso_local i64 @lua_next(i32*, i32) #1

declare dso_local i32 @lua_pop(i32*, i32) #1

declare dso_local i64 @lua_type(i32*, i32) #1

declare dso_local i32 @lua_tointeger(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
